Update ref in vignette

--- a/vignettes/v3_prior_distributions.Rmd
+++ b/vignettes/v3_prior_distributions.Rmd
@@ -208,6 +208,6 @@ jfa::evaluation(materiality = materiality, conf.level = confidence, x = 1, n = 6
 
 ## References
 
-* Derks, K., de Swart, J., Wagenmakers, E.-J., and Wetzels, R. (2021). A default Bayesian hypothesis test for audit sampling. *Working paper*.
+* Derks, K., de Swart, J., Wagenmakers, E.-J., and Wetzels, R. (2022). An impartial Bayesian hypothesis test for audit sampling. *PsyArXiv*.
 
 * Derks, K., de Swart, J., van Batenburg, P., Wagenmakers, E.-J., and Wetzels, R. (2021). Priors in a Bayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency. *International Journal of Auditing*, 25(3), 621-636.
