--- a/vignettes/v7_bayes_factors_summary_statistics.Rmd
+++ b/vignettes/v7_bayes_factors_summary_statistics.Rmd
@@ -98,7 +98,7 @@ evaluation(materiality = tolerance, x = 2 + 0, n = 32 + 50, prior = prior)
 
 ## References
 
-* Derks, K., de Swart, J., Wagenmakers, E.-J., and Wetzels, R. (2021). A default Bayesian hypothesis test for audit sampling. *Working paper*.
+* Derks, K., de Swart, J., Wagenmakers, E.-J., and Wetzels, R. (2021). An impartial Bayesian hypothesis test for audit sampling. *PsyArXiv*.
 
 * Derks, K., de Swart, J., van Batenburg, P., Wagenmakers, E.-J., and Wetzels, R. (2021). Priors in a Bayesian audit: How integration of existing information into the prior distribution can improve audit transparency and efficiency. *International Journal of Auditing*, 25(3), 621-636.
 
