--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -27,7 +27,7 @@ First, we load the `jfa` package and the `BuildIt` data set. The first 10 invoic
 ```{r}
 library(jfa)
 
-data('BuildIt')
+data("BuildIt")
 head(BuildIt, n = 10)
 ```
 
@@ -61,7 +61,7 @@ First, let's take a look at how you can use the `planning()` function to calcula
 A minimum sample size for this sampling objective can be calculated by specifying the `materiality` parameter in the `planning()` function, see the code below. Next, a summary of the statistical results can be obtained using the `summary()` function. The results show that, given zero tolerable errors, the minimum sample size is 60 units.
 
 ```{r}
-stage1 <- planning(materiality = 0.05, expected = 0, likelihood = 'poisson', conf.level = 0.95)
+stage1 <- planning(materiality = 0.05, expected = 0, likelihood = "poisson", conf.level = 0.95)
 summary(stage1)
 ```
 
@@ -74,7 +74,7 @@ Next, let's take a look at how you can use the `planning()` function to calculat
 A minimum sample size for this sampling objective can be calculated by specifying the `min.precision` parameter in the `planning()` function, see the code below. The results show that, given zero tolerable errors, the minimum sample size is 150 units.
 
 ```{r}
-stage1 <- planning(min.precision = 0.02, expected = 0, likelihood = 'poisson', conf.level = 0.95)
+stage1 <- planning(min.precision = 0.02, expected = 0, likelihood = "poisson", conf.level = 0.95)
 summary(stage1)
 ```
 
@@ -90,7 +90,7 @@ First, let's take a look at how the `selection()` function can be used to perfor
 
 ```{r}
 set.seed(1)
-stage2 <- selection(data = BuildIt, size = 60, units = 'items', method = 'random')
+stage2 <- selection(data = BuildIt, size = 60, units = "items", method = "random")
 summary(stage2)
 ```
 
@@ -99,7 +99,7 @@ summary(stage2)
 Next, let's take a look at how the `selection()` function can be used to perform fixed interval monetary unit sampling. Fixed interval monetary unit sampling implies that the sampling units are set to `values` and the selection method is set to `interval`. The code below selects 150 monetary units from the `BuildIt` data set using such a fixed interval monetary unit sampling scheme.
 
 ```{r}
-stage2 <- selection(data = BuildIt, size = 150, units = 'values', method = 'interval', values = 'bookValue')
+stage2 <- selection(data = BuildIt, size = 150, units = "values", method = "interval", values = "bookValue")
 summary(stage2)
 ```
 
@@ -109,7 +109,7 @@ The selected units and corresponding items are stored in the object that is retu
 
 ```{r}
 set.seed(1)
-stage2 <- selection(data = BuildIt, size = 60, units = 'items', method = 'random')
+stage2 <- selection(data = BuildIt, size = 60, units = "items", method = "random")
 
 sample <- stage2$sample
 head(sample, n = 10)
@@ -124,7 +124,7 @@ After annotating the items in the sample with their audit values you can perform
 First, let's take a look at how the `evaluation()` function can be combined with summary statistics from a sample. Suppose that in the previously selected sample of 60 invoices it is found that a single invoice is missing an autograph. These summary statistics can be provided to the `evaluation()` function with `x = 1` and `n = 60`. The function also requires that you specify the sampling objectives using the `materiality` or `min.precision` arguments. Again, a performance materiality of 5% again applies.
 
 ```{r}
-stage4 <- evaluation(materiality = 0.05, method = 'poisson', conf.level = 0.95, x = 1, n = 60)
+stage4 <- evaluation(materiality = 0.05, method = "poisson", conf.level = 0.95, x = 1, n = 60)
 summary(stage4)
 ```
 
@@ -135,16 +135,18 @@ The results indicate that the most likely error in the population is 1.66%. More
 Next, let's take a look at how the `evaluation()` function can be combined with a data sample. Returning to our annotated sample from the `selection()` function, suppose that in the previously selected sample of 60 invoices it is found that a single invoice has a true value that deviates from its booked value. 
 
 ```{r}
-sample$auditValue    <- sample$bookValue
+sample$auditValue <- sample$bookValue
 sample$auditValue[1] <- sample$auditValue[1] - 100
 ```
 
 These data can be provided to the `evaluation()` function using the `data`, `values`, `values.audit`, and `times` arguments. The `method` argument determines the method of inference. For example, the code below evaluates the misstatement in the population using the commonly used Stringer bound. You can find more information about which evaluation methods are implemented on the [home page](https://koenderks.github.io/jfa/).
 
 ```{r}
-stage4 <- evaluation(materiality = 0.05, method = 'stringer', conf.level = 0.95,
-                     data = sample, values = 'bookValue', values.audit = 'auditValue',
-                     times = 'times')
+stage4 <- evaluation(
+  materiality = 0.05, method = "stringer", conf.level = 0.95,
+  data = sample, values = "bookValue", values.audit = "auditValue",
+  times = "times"
+)
 summary(stage4)
 ```
 
@@ -155,9 +157,11 @@ The results indicate that the most likely error in the population is 1%. Moreove
 With the results from the `evaluation()` function in hand, a call to the `report()` function automatically generates a report containing the data, the statistical results and their interpretation, and the conclusion of the sampling procedure with respect to the sampling objectives. The object returned by the `evaluation()` function can be supplied directly to the `report()` function, see the code below.
 
 ```{r, eval = FALSE}
-stage4 <- evaluation(materiality = 0.05, method = 'stringer', conf.level = 0.95,
-                     data = sample, values = 'bookValue', values.audit = 'auditValue',
-                     times = 'times')
+stage4 <- evaluation(
+  materiality = 0.05, method = "stringer", conf.level = 0.95,
+  data = sample, values = "bookValue", values.audit = "auditValue",
+  times = "times"
+)
 
-report(stage4, file = 'report.html', format = 'html_document') # Generates .html report
+report(stage4, file = "report.html", format = "html_document") # Generates .html report
 ```
